# zk-snap-frontend-v2

./: .env  .env.sample  .eslintrc.json  .gitignore  .prettierignore  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.worker.json
public/: mockServiceWorker.js
public/workers/: vote.js
src/__tests__/components/: breadcrumb.test.tsx  community-section.test.tsx  community.test.tsx  communitySection.test.tsx  datePicker.test.tsx  faq.test.tsx  footer.test.tsx  indicators.test.tsx  proposal-card.test.tsx  proposal-info.test.tsx  proposal-section.test.tsx  proposal-voting.test.tsx  proposalCard.test.tsx  proposalInfo.test.tsx  (+5 more)
src/app/: error.tsx  layout.tsx  page.tsx
src/components/: breadcrumb.tsx  communities.tsx  community-section.tsx  community.tsx  communitySection.tsx  datePicker.tsx  faq.tsx  footer.tsx  idkit-widget.tsx  idkitWidget.tsx  image-with-fallback.tsx  indicators.tsx  proposal-card.tsx  proposal-info.tsx  proposal-section.tsx  proposal-voting.tsx  proposalCard.tsx  proposalInfo.tsx  proposalSection.tsx  proposalStatus.tsx  proposalVoting.tsx  sidebar.tsx  slider.tsx  timePicker.tsx  timePickerInput.tsx  timePickerUtils.tsx  vote.tsx
src/lib/: actions.ts  actions.tsx  icons.tsx  interfaces.ts  store.tsx  utils.ts
src/mocks/: handlers.ts  types.ts
src/utils/: data.ts  faqData.ts  handler.ts
wasm/: Cargo.toml
wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm.d.ts
wasm/pkg/snippets/wasm-bindgen-rayon-61c530a5c67cc8eb/src/: workerHelpers.js
wasm/src/: lib.rs
(+32 files in other folders)
